--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
     <section class="factors">
       <div class="wrapper">
         <h2>Факторы, влияющие на продолжительность проведения аудита</h2>
-        <ul class="factors__list">
+        <ol class="factors__list">
           <li class="factors__item">
             <h3>Применимый стандарт на СМК и другие требования</h3>
             <p>Продолжительность аудитов СМК может зависеть от применимого к СМК стандарта(ов) и требований схемы сертификации, а также вида аудита (комбинированный, комплексный, совместный)</p>
@@ -330,7 +330,7 @@
             - потребность в услугах устных или письменных переводчиков;<br>
             - потребность в услугах технических экспертов.</p>
           </li>
-        </ul>
+        </ol>
       </div>
     </section>
     
@@ -364,13 +364,14 @@
     </section>
     
     <section class="contacts">
-      <div class="wrapper">
-        <div class="contacts__card">
-          <p class="contacts__name">Дмитриева Татьяна Осиповна</p>
-          <p class="contacts__position">Руководитель органа по сертификации систем менеджмента качества ООО <span>«Интеркачество»</span></p>
-          <a href="tel:+79262035212" class="contacts__link">+7 (926) 203-52-12</a>
-          <a href="mailto:admitriev@list.ru" class="contacts__link">admitriev@list.ru</a>
-        </div>
+      <div class="contacts__map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10098.765308789081!2d33.47338840300752!3d50.7442136731064!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4129f118b7546ccf%3A0xb8a18dce6381c981!2sRomny%2C+Sums&#39;ka+oblast%2C+Ukraine%2C+42004!5e0!3m2!1sen!2skz!4v1530875094889" allowfullscreen></iframe>
+      </div>
+      <div class="contacts__card">
+        <p class="contacts__name">Дмитриева Татьяна Осиповна</p>
+        <p class="contacts__position">Руководитель органа по сертификации систем менеджмента качества ООО <span>«Интеркачество»</span></p>
+        <a href="tel:+79262035212" class="contacts__link">+7 (926) 203-52-12</a>
+        <a href="mailto:admitriev@list.ru" class="contacts__link">admitriev@list.ru</a>
       </div>
     </section>
   </main>
