--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <h1>Орган по сертификации систем менеджмента качества Общества с ограниченной ответственностью <span>«ИНТЕРКАЧЕСТВО»</span></h1>
         <a href="#" class="promo__btn">Заказать консультацию</a>
       </div>
-      <a href="#" class="promo__next">Листайте дальше</a>
+      <a href="#scheme" class="promo__next">Листайте дальше</a>
     </section>
     
-    <section class="scheme wrapper">
-      <h2>Описание схем сертификации</h2>
+    <section class="scheme wrapper" id="scheme">
+      <h2><span>Описание схем сертификации</span></h2>
       <p class="scheme__title">Схемы сертификации систем менеджмента включают следующие процедуры:</p>
       <ul class="scheme__list">
         <li class="scheme__item">
@@ -381,6 +381,7 @@
   </footer>
   
   <script src="js/jquery-3.2.1.min.js"></script>
+  <script src="js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.2.2/js/swiper.min.js"></script>
 
 <!-- Sliders -->
